--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -641,8 +641,8 @@ img {
   justify-content: center;
   padding: 0 1rem;
   z-index: var(--z-modal);
-  /* opacity: 0; */
-  /* visibility: hidden; */
+  opacity: 0;
+  visibility: hidden;
   transition: .3s;
 }
 
@@ -652,8 +652,39 @@ img {
   padding: 1.5rem;
   border-radius: .5rem;
 }
-/* Active Modal */
 
+.services__modal-content{
+  row-gap: 1rem;
+}
+
+.services__modal-services{
+  display: flex;
+}
+
+.services__modal-title{
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-medium);
+  margin-bottom: var(--mb-1-5);
+}
+
+.services__modal-close{
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 1.5rem;
+  color: var(--first-color);
+  cursor: pointer;
+}
+
+.services__modal-icon{
+  color: var(--first-color);
+  margin-right: var(--mb-0-25);
+}
+/* Active Modal */
+.active-modal{
+  opacity: 1;
+  visibility: visible;
+}
 
 /*==================== PORTFOLIO ====================*/
 
