--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -288,7 +288,7 @@ img {
   gap: 1rem;
 }
 
-.home__container{
+.home__content{
   grid-template-columns: .5fr 3fr;
   padding-top: 3.5rem;
   align-items: center;
